Fix input display on mobile safari, v1.1.10

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -64,6 +64,10 @@ input[type='text'] {
   border-width: 1px;
   border-style: solid;
   border-color: rgba(black, 0.20);
+  border-radius: 0;
+
+  // To remove default styles on mobile safari
+  -webkit-appearance: none;
 }
 
 input[type='checkbox'] {
